--- a/contactWidget.html
+++ b/contactWidget.html
@@ -10,8 +10,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-6">
+			<!-- <div class="col-sm-6">
 				<div class="form-group"><div class="col-sm-12"><input type="text" class="form-control input-sm" id="ltcwFirstName" placeholder="* First Name" required /></div></div>
+			</div> -->
+			<div class="col-sm-6">
+				<div class="form-group"><label for="" class="col-sm-12 control-label">Last Name</label></div>
 			</div>
 			<div class="col-sm-6">
 				<div class="form-group"><div class="col-sm-12"><input type="text" class="form-control input-sm" id="ltcwLastName" placeholder="* Last Name" required /></div></div>
