--- a/contactWidget.html
+++ b/contactWidget.html
@@ -172,7 +172,9 @@
 	</div>
 	<div class="testMsg"></div>
 </div>
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
 <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
+<script type="text/javascript" src="/js/lib/jquery.placeholder.min.js"></script>
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
 var ltCaptcha = new LoanTekCaptcha();
