--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -1,22 +1,26 @@
 <style type="text/css">.ltcw {display:none;}</style>
 <link rel="stylesheet" href="/css/widget.css">
 <div id="ltWidgetWrapper"></div>
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
 <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
+<script type="text/javascript" src="/js/lib/jquery.placeholder.min.js"></script>
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
 (function () {
 	// var ltCaptcha = new LoanTekCaptcha();
 	var ltCaptcha;
-	var _ltCaptcha = function () {
+	// var _ltCaptcha = function () {
+	// 	ltCaptcha = new LoanTekCaptcha();
+	// };
+
+	var postDOMFunctions = function () {
+		// ltjQuery('input, textarea').placeholder();
+		// _ltCaptcha();
 		ltCaptcha = new LoanTekCaptcha();
 	};
 
-	var postDOMFunctions = function () {
-		_ltCaptcha();
-	};
-
 	var externalValidators = function () {
-		// window.console && console.log('external validatorss');
+		// window.console && console.log('external validator');
 		return ltCaptcha.IsValidEntry();
 	};
 
