--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -1,5 +1,11 @@
 <style type="text/css">.ltcw {display:none;}</style>
 <link rel="stylesheet" href="/css/widget.css">
+<style type="text/css">
+.ltcw .form-group .form-control { border-radius: 0px; }
+.ltcw .btn { border-radius: 0px; }
+.ltcw .panel { border-radius: 0px; }
+.ltcw { background-color: #add; padding: 40px; }
+</style>
 <div id="ltWidgetWrapper"></div>
 <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
 <script type="text/javascript" src="/js/lib/jquery.min.js"></script>
@@ -28,7 +34,7 @@
 	// };
 	var loanTekManualContactWidgetBuildObject = {
 		showBuilderTools: true,
-		defaultFormSize: 'sm',
+		fieldSize: 'sm',
 		wrapperId: 'ltWidgetWrapper',
 		postDOMCallback: postDOMFunctions,
 		formId: 'LtcwContactWidgetForm',
