--- a/contactWidget.html
+++ b/contactWidget.html
@@ -34,6 +34,11 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-6">
+				<h4>Title</h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6">
 				<div class="form-group">
 					<div class="col-sm-12"><input type="text" class="form-control input-sm" id="ltcwCompany" placeholder="Company" /></div>
 				</div>
