--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	<script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular-animate.min.js"></script>
-	<script type="text/javascript" src="/js/lib/angular-sanitize.min.js"></script>
+	<!-- <script type="text/javascript" src="/js/lib/angular-sanitize.min.js"></script> -->
 	<script type="text/javascript" src="/js/lib/ui-bootstrap-tpls.min.js"></script>
 
 	<!-- <script type="text/javascript">window.console && console.log('before', $.fn.jquery, 'ltjQuery', ltjQuery);</script> -->
