changes to widget helpers

--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
 				<div class="form-group form-group-sm">
 					<label for="ltewBorderWidth" class="col-sm-2 control-label">Border Width</label>
 					<div class="col-sm-2">
-						<input type="number" class="form-control" id="ltewBorderWidth" name="ltewBorderWidth" />
+						<input type="number" class="form-control" id="ltewBorderWidth" name="ltewBorderWidth" data-ng-model-N="" />
 					</div>
 				</div>
 			</div>
